<resources>
    <string name="app_name">CondominioApp</string>
    <string name="facebook_app_id">1290726257677962</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chamados">Chamados</string>
    <string name="meus_chamados">Meus Chamados</string>
    <string name="comentarios">COMENTÁRIOS</string>
    <string name="detalhes">Detalhes</string>
    <string name="novo_chamado">Novo Chamado</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_descricao">Descrição</string>
    <string name="home_title">Home</string>
    <string name="sobre_title">Sobre</string>
    <string name="logout_title">Logout</string>
    <string name="bemvindo">Seja bem-vindo</string>
    <string name="rota">Traçar rota</string>
    <string name="missao">Missão:</string>
    <string name="visao">Visão:</string>
    <string name="valores">Valores:</string>
    <string name="visao_desc">Ser a empresa prestadora de serviços mais confiável e da mais alta qualidade, excelência, presteza e agilidade em atendimento ao cliente.</string>
    <string name="missao_desc">Ser reconhecida no mercado por buscar uma melhoria contínua, alcançando a excelência na qualidade dos serviços prestados a todos os clientes com credibilidade e confiabilidade.
</string>
    <string name="valores_desc">Ética, qualidade no atendimento, confiabilidade, praticidade e agilidade. Com o propósito de sempre buscar fazer melhor a cada dia, hoje nos sentimos colhedores dos frutos das muitas sementes que plantamos. Entre alguns deles, ressaltamos as muitas e verdadeiras amizades que conquistamos e o reconhecimento profissional. Mas  muitos frutos ainda queremos colher. A tarefa é difícil, mas não  é impossível.
</string>
    <string name="enviarEmail">Notificar</string>
    <string name="baseUrl">http://192.168.25.56:8080/Chamado/WS</string>
</resources>
